create mappings for bad espn property names

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cheerio": "^1.0.0-rc.2",
         "express": "^4.15.3",
         "jsdom": "^11.3.0",
+        "lodash": "^4.17.5",
         "request": "^2.83.0"
     },
     "devDependencies": {
